# unaligned-frame

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  examples.rst  index.rst
src/: unaligned_frame.py
tests/: test_unaligned_frame.py
