[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unaligned-frame"
version = "0.1.0"
description = "A container for pandas Series of unequal lengths with a DataFrame-like API."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
]

[tool.setuptools.package-dir]
"" = "src"
